# OHIE

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
Aero-GIS/: README_BACKEND.md  backend.py  genetic_designer.py  run_aero_design.py  run_backend.py  test_upload.html  ui.html
Flood-Modeling-HRF-Physics/: DOMAIN_KNOWLEDGE_OVERRIDE.md  MULTI_TILE_SUMMARY.md  PHYSICS_UPGRADE_LOG.md  UPGRADE_LOG.md  experience_store.json  run_active_learning.py  run_budget_sweep.py  run_qcia_flood_optimization.py  test_10tile_full_aoi.sh  test_QCA_vs_GREEDY.sh  test_QCIA_MULTI_TILE.sh  test_QCIA_MULTI_TILE.sh.bak  test_QCIA_MULTI_TILE_10.sh  test_jabalpur_CORRECT.sh  test_jabalpur_full_pipeline.sh  test_jabalpur_matching_aoi.sh  test_quick.sh
Flood-Resilience/: idea.md  priority_zone_extractor.py  requirements.txt  run_gorakhpur_analysis.py  urban_diagnostics.py
Linear-Alignment-MTHL/: alignment_diagnostics.py  alignment_planner.py  alignment_rules.py  alignment_validator.py  edit.md  hrf.py  run_alignment_analysis.py
Water-Management/: detailed_water_engineer.py  run_water_management_analysis.py  water_intervention_planner.py  water_opportunity_extractor.py  water_resource_diagnostics.py
archive/: README.md
docs/: benchmark_guide.md  claim_discipline.md  confidence_matrix.md  evidence_matrix.md  extension-guide.md  flux_coupling.md  intervention-api.md  known_limitations.md  notebooks.md  numerical-stability.md  ohie_scientific_summary.md  physics-assumptions.md  quickstart.md  reproducibility.md  (+5 more)
(+528 files in other folders)
