[project]
name = "ohie"
version = "0.1.0"
description = "Open Hydrodynamic Intervention Engine"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
geo = [
  "rasterio>=1.3",
  "shapely>=2.0",
  "fiona>=1.9",
  "pyproj>=3.5",
]
test = [
  "pytest>=7.0",
]
config = [
  "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
